# SWE_final

./: .coverage  .env  .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
backend/: main.py  user.py
backend/app/: auth.py  home.py  listing.py  search.py  user.py
backend/backend/: main.py
backend/db/: database.py  repository.py
backend/scripts/: check_db.py
backend/utilities/: helpers.py  models.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Navbar.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: AuthCallback.js  CreateListing.js  Home.js  ListingDetail.js  Login.js  Number.js  Profile.js  Search.js
frontend/src/services/: api.js  apiService.js  cloudinaryService.js
tests/: conftest.py  test_auth.py  test_get_recent.py  test_listing.py  test_listings.py  test_reservation.py  test_reservation_negative.py  test_search.py  test_user.py  test_user_update_phone.py
